Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23474

InnoDB fails to start with Invalid log block checksum after unsetting innodb_log_checksums dynamically

    XMLWordPrintable

Details

    Description

      Setting to Minor because the variable has been deprecated in 10.5. However, it is useful to have it at least filed, if not fixed, in case we get complaints of a similar kind from users who wouldn't be able to provide the exact sequence of events prior to the problem.

      --source include/have_innodb.inc
      SET GLOBAL innodb_log_checksums= 0;
      --source include/restart_mysqld.inc
      

      10.4 05d62518

      2020-08-13 22:11:59 0 [ERROR] InnoDB: Invalid log block checksum. block: 135 checkpoint no: 4 expected: 1507941287 found: 3735928559
      2020-08-13 22:11:59 0 [ERROR] InnoDB: Missing MLOG_CHECKPOINT at 68859 between the checkpoint 68859 and the end 68608.
      2020-08-13 22:11:59 0 [ERROR] InnoDB: Plugin initialization aborted at srv0start.cc[1871] with error Generic error
      2020-08-13 22:12:00 0 [ERROR] Plugin 'InnoDB' init function returned error.
      2020-08-13 22:12:00 0 [ERROR] Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
      

      The above minimal test case is only applicable to MTR, but originally the similar problem was observed on a server bootstrapped and started without MTR.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5d
                  0.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.